--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
