Create signin api, install cookie parser, and jsonwebtoken

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-
+SECRET_PASS = 1234IloveYouaLL124
 #SERVICE ACCOUNT thesis-final-final
 FIREBASE_TYPE=service_account
 FIREBASE_PROJECT_ID=thesis-final-final
