--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "@mui/x-charts": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "chart.js": "^4.4.6",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.7.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-gauge-component": "^1.2.6",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
