--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "bcryptjs": "^2.4.3",
     "client": "^0.0.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "create": "^0.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
-    "vite": "^5.4.10"
+    "socket.io": "^4.8.1"
   }
 }
