--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.1",
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
   }
