--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,14 @@
     "@mui/x-charts": "^7.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "chart.js": "^4.4.6",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.1",
     "flowbite-react": "^0.7.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-gauge-component": "^1.2.6",
     "react-icons": "^5.3.0",
