--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-wasm": "^3.3.0"
   }
 }
